--- a/src/main/webapp/WEB-INF/pages/index.html
+++ b/src/main/webapp/WEB-INF/pages/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xml:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<!--@{/auth} -> /demo/auth-->
+  <form th:action="@{/auth}" method="post">
+<!--send the method name-->
+      <input type="hidden" name="method" value="login">
 
+<!--get the name with attr name-->
+      <p style="color: red; font-weight: bold;" th:text="${message}"></p>
+      <p style="color: red; font-weight: bold;" th:text="${systemMessage}"></p>
+
+      账号：<input type="text" name="loginAccount"/><br/>
+      密码：<input type="password" name="loginPassword"><br/>
+      <button type="submit">进宫</button>
+  </form>
 </body>
 </html>
